[package]
name = "slack-rust"
version = "0.0.4-alpha"
authors = ["Richard Watts <richard@zilliqa.com>", "Gompei <shoueigonpei6028@gmail.com>"]
edition = "2021"
description = "Slack API Client"
documentation = "https://docs.rs/slack-rust/"
readme = "README.md"
homepage = "https://crates.io/crates/slack-rust"
repository = "https://github.com/Gompei/slack-rust"
license = "Apache-2.0"
keywords = ["slack-rust", "slack"]
categories = ["web-programming::http-client", "web-programming::websocket"]

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
async-trait = "0.1.86"
async-tungstenite = "0.19.0"
futures-util = "0.3.31"
log = "0.4.25"
rustls = "0.19.1"
serde =  { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "1.14.0", features = [ "serde_with_macros" ] }
surf =  { version = "2.3.2", features = ["curl-client", "encoding"] }
url = "2.5.4"

[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]

[dev-dependencies]
env_logger = "0.10.2"
mockall = "0.11.4"

[dev-dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["server"]